<resources>
    <string name="app_name">Contact Tracker</string>

    <!-- Strings genéricos -->
    <string name="apply">Aplicar</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="minutes">Minutos</string>
    <string name="seconds">Segundos</string>
    <string name="meters">Metros</string>
    <string name="lat">Latitud</string>
    <string name="lng">Longitud</string>
...
    <string name="shared_prefs_positives_notifications">PositivesNotifications</string>

    <!-- Bottom Navigation Menu -->
    <string name="bottom_menu_item_1">Rastreador</string>
    <string name="bottom_menu_item_2">Positivo</string>
    <string name="bottom_menu_item_3">Contactos</string>
    <string name="bottom_menu_item_4">Histórico</string>


    <!-- Default Blank Fragment -->
    <string name="default_blank_fragment">DEFAULT BLANK FRAGMENT</string>


...
    <string name="locationTrackerTitle">Rastreo de Ubicación</string>
    <string name="labelStartStopTracker">Servicio para rastrear la ubicación</string>

    <!-- Títulos de las Tabs de la opción de menú de rastreo -->
    <string name="tabTracker">Rastreador</string>
    <string name="tabAlarms">Alarmas</string>
    <string name="tabMap">Mapa</string>

    <!-- Fragment de Información del rastreo de ubicación -->
    <string name="labelNoLocations">No hay localizaciones que mostrar.</string>


    <!-- Fragment: Histórico de localizaciones -->
    <string name="btnTxtDeleteAllLocations">Eliminar todas las localizaciones</string>
    <string name="labelHistoryNoLocations">No hay localizaciones que mostrar</string>
    <string name="date">Fecha</string>
    <string name="history_date_picker_title">Selecciona una fecha</string>
    <string name="showInMap">Visualizar en el mapa</string>
    <string name="locations">localizaciones</string>
    <string name="deleteLocationsText">Se han eliminado %d localizaciones.</string>

    <!-- Alarmas de localización -->
    <string name="locationAlarmsTitle">Alarmas de localización</string>
    <string name="labelActivateAlarm">Programar rastreo automático</string>
    <string name="init">Inicio</string>
...
    <string name="addNewAlarmExplanation">Programa una alarma para iniciar y detener el rastreo de tu ubicación a una hora de inicio y de fin determinadas.</string>

    <!-- Fragment: Configuración del Tracker -->
    <string name="minIntervalHint">Intervalo de tiempo</string>
    <string name="minDisplacementHint">Desplazamiento mínimo</string>
    <string name="minIntervalNumberPickerTitle">Seleccionar intervalo mínimo</string>
    <string name="contentDescriptionDeleteLocationsByDate">Eliminar localizaciones por fecha</string>

    <!-- Fragment para Notificar POSITIVOS -->
    <string name="notifyAPositive">Notificar un positivo</string>
    <string name="genericErrorNotifyPositive">Ha habido un error al notificar el positivo. No ha sido posible subir las localizaciones a la nube.</string>
    <string name="notifyExplanation1">Registra que has dado positivo en la aplicación para que tus localizaciones registradas en los últimos días se suban a la nube.</string>
    <string name="notifyExplanation2">Opcionalmente puedes adjuntar tus datos personales, los cuales quedarán asociados a tus localizaciones. De este modo, contribuyes a facilitar las tareas de rastreo realizadas por el personal sanitario.</string>
...
    <string name="dni">DNI</string>
    <string name="phoneNumber">Número de teléfono</string>
    <string name="city">Localidad</string>
    <string name="cp">Código Postal</string>

    <!-- Fragment: Map -->
    <string name="fabMapTypeDescription">FAB para desplegar tipos de mapa</string>
    <string name="fabMapNormalDescription">FAB para seleccionar tipo normal de mapa</string>
    <string name="fabMapSatelliteDescription">FAB para seleccionar tipo satélite de mapa</string>
    <string name="showInMapContentDescription">Visualizar en el mapa</string>
    <string name="hide_markers">Ocultar marcadores</string>
    <string name="show_markers">Mostrar marcadores</string>
    <string name="markers">Marcadores</string>


    <!-- Política de Privacidad -->
    <string name="personalDataConsent">Consentimiento de Protección de Datos</string>
    <string name="personalDataRationale">Esta aplicación utiliza tus datos personales asociados a las localizaciones registradas
        para facilitar y mejorar las tareas de rastreo por parte de las autoridades sanitarias. Estos datos personales serán subidos a la nube una
...
